# cccs106-projects

./: README.md
mod6_labs/: .gitignore  README.md  main.py  requirements.txt  search_history.json  test_weather_service.py  weather_service.py
mod6_labs/week1_labs/: basic_calculator.py  hello_world.py
mod6_labs/week2_labs/: LAB2_report.md
mod6_labs/week3_labs/src/: db_connection.py
mod6_labs/week4_labs/contact_book_app/src/: database.py  main.py
week1_labs/: LAB1_report.md
week2_labs/: hello_flet.py  personal_info_gui.py
week3_labs/: README.md  pyproject.toml
week3_labs/src/: main.py
week4_labs/contact_book_app/: README.md  app_logic.py  contacts.db  main.py  requirements.txt
week4_labs/contact_book_app/src/: app_logic.py
